# metascrub

./: .gitignore  LICENSE  README.md  pyproject.toml
metascrub/: banner.py  c2pa.py  cleaner.py  cli.py  detectors.py  dumper.py  formatter.py  injector.py  interactive.py  jpeg_cleaner.py  png_cleaner.py  pyproject.toml  scanner.py  webp_cleaner.py
tests/: test_c2pa.py  test_cleaner.py  test_detectors.py  test_injector.py  test_png_cleaner.py  test_scanner.py
